Fix overflow in desktop

--- a/assets/css/default.css
+++ b/assets/css/default.css
@@ -153,7 +153,7 @@ blocks
 .main {
     overflow: hidden;
     box-sizing: border-box;
-    width: 100vw;
+    width: 100%;
 }
 
 .menu {
